# JuicyPixels-extra

./: .travis.yml  CHANGELOG.md  JuicyPixels-extra.cabal  README.md  cabal.project  stack.yaml
.github/workflows/: ci.yaml
Codec/Picture/: Extra.hs
bench/: Main.hs
tests/Codec/Picture/: ExtraSpec.hs
