cabal-version:   1.18
name:            JuicyPixels-extra
version:         0.4.1
license:         BSD3
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.1
homepage:        https://github.com/mrkkrp/JuicyPixels-extra
bug-reports:     https://github.com/mrkkrp/JuicyPixels-extra/issues
synopsis:        Efficiently scale, crop, flip images with JuicyPixels
description:     Efficiently scale, crop, flip images with JuicyPixels.
category:        Graphics, Image
build-type:      Simple
data-files:      data-examples/*.png
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/JuicyPixels-extra.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Codec.Picture.Extra
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <5,
        JuicyPixels >=3.2.6.4 && <3.4

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-tools:      hspec-discover >=2.0 && <3.0
    hs-source-dirs:   tests
    other-modules:    Codec.Picture.ExtraSpec
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <5,
        JuicyPixels >=3.2.6.4 && <3.4,
        JuicyPixels-extra -any,
        hspec >=2.0

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

benchmark bench
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <5,
        JuicyPixels >=3.2.6.4 && <3.4,
        JuicyPixels-extra -any,
        criterion >=0.6.2.1 && <1.6

    if flag(dev)
        ghc-options: -O2 -Wall -Werror

    else
        ghc-options: -O2 -Wall
